--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -138,7 +138,7 @@ body, html {
     top: 50%;
     left: 50%;
     font-size: 50px;
-    color: Blue;
+    color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
@@ -147,7 +147,7 @@ body, html {
     top: 50%;
     left: 50%;
     font-size: 45px;
-    color: white;
+    color: blue;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
