--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -1,6 +1,6 @@
 body, html {
     height: 100%;
-
+    width: 100%;
 
 }
 
@@ -28,11 +28,9 @@ body, html {
 }
 .jumbotron{
   background-image: url('jayfont.png');
-  background-position: ;
   background-repeat: no-repeat;
-  background-size: 1200px;
   background-size: cover;
-  height: 500px;
+  height: 200px;
 }
 .jumbotron .container {
   position: relative;
