--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -31,6 +31,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   height: 200px;
+  background-color:white;
 }
 .jumbotron .container {
   position: relative;
