--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -12,7 +12,7 @@ body, html {
   background-image: url('jayfont.png');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 200px;
+  height: 10%;
 }
 .jumbotron .container {
   position: relative;
