--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -13,6 +13,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   height: 10%;
+  background-color:white;
 }
 .jumbotron .container {
   position: relative;
