--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -5,6 +5,7 @@ body, html {
     background-size: 500px;
     background-repeat: no-repeat;
     background-position: center;
+    
 }
 
 
@@ -18,6 +19,7 @@ body, html {
 .jumbotron .container {
   position: relative;
   top:100px;
+  margin: 0 auto;
 }
 .jumbotron h1 {
   color: #fff;
