--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,6 +14,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   height: 20%;
+  background-position:center;
   background-color:white;
 }
 .jumbotron .container {
