--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,7 +14,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   height: 20%;
-  background-position:center;
+ width: 1000px;
   background-color:white;
 }
 .jumbotron .container {
