--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -1,9 +1,8 @@
 body, html {
     height: 100%;
     width: 100%;
-    background-image: url('smileface.jpg');
+    background-image: url('smileface.jpg') center center no-repeat;
     background-size: 500px;
-    background-repeat: no-repeat;
     background-position: center;
     
 }
