--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,6 +14,9 @@ body, html {
   background-size: cover;
   height: 20%;
   background-color:white;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
 }
 .jumbotron .container {
   position: relative;
