--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -11,6 +11,7 @@ body, html {
 .jumbotron{
   background-image: url('jayfont.png') ;
   background-position:no-repeat;
+  background-position:absolute;
   background-size: cover;
   height: 20%;
   background-color:white;
