--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -1,6 +1,6 @@
 body, html {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     min-height:50%;
     min-width:50%;
     background-image: url('smileface.jpg');
@@ -57,8 +57,8 @@ body, html {
   margin: 0 auto;
   position: relative;
   top: 30%;
-  width:50%%;
-  height:50%;
+  width:35%%;
+  height:20%;
   font-family: monospace;
   margin-top:100px;
 
