--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -16,7 +16,7 @@ body, html {
   background-size: cover;
   height: 20%;
   background-color:white;
-  
+  margin-left:20%;
 }
 
 
@@ -58,7 +58,7 @@ body, html {
   position: relative;
   top: 30%;
   width:35%%;
-  height:10%;
+  height:5%;
   font-family: monospace;
   margin-top:100px;
 
