--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -4,7 +4,7 @@ body, html {
     min-height:50%;
     min-width:50%;
     background-image: url('smileface.jpg');
-    background-size: 50%;
+    background-size: 40%;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -12,7 +12,8 @@ body, html {
 
 .jumbotron{
   background-image: url('jayfont.png') ;
-  background-position: no-repeat;
+  background-position: no-repeat ;
+  background-position-x:center;
   background-size:100%;
   height:20%;
   background-color:white;
