--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,8 +14,10 @@ body, html {
   background-image: url('jayfont.png') ;
   background-position: no-repeat ;
   background-position-x:center;
-  background-size:100%;
+  background-size: cover;
   height:20%;
+  width:inherit;
+
   background-color:white;
 
 }
