--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,7 +14,7 @@ body, html {
   background-image: url('jayfont.png') ;
   background-position: no-repeat ;
   background-position-x:center;
-  background-size: cover;
+  background-size: 200%;
   height:20%;
   background-color:white;
 
