--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -12,9 +12,8 @@ body, html {
 
 .jumbotron{
   background-image: url('jayfont.png') ;
-  background-position: no-repeat ;
-  background-position-x:center;
-  background-size: 100%;
+  background-position: no-repeat;
+  background-size: cover;
   height:20%;
   background-color:white;
 
