--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -12,8 +12,8 @@ body, html {
 
 .jumbotron{
   background-image: url('jayfont.png') ;
-  background-position: no-repeat;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size:100%;
   height:20%;
   background-color:white;
 
