--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -64,8 +64,8 @@ top:100px;
   margin: 0 auto;
   position: relative;
   top: 30%;
-  width:35%%;
-  height:20%;
+  width:35%;
+  height:17%;
   font-family: monospace;
 
 
