--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -60,7 +60,7 @@ top:100px;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
-  font-size: 10%;
+  font-size: 15em;
   margin: 0 auto;
   position: relative;
   top: 30%;
