--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,8 +14,9 @@ body, html {
   background-image: url('jayfont.png') ;
   background-position: center;
   background-repeat: no-repeat;
-  background-size:100%;
-  height:20%;
+  background-size:cover;
+  height: 100%;
+  width: 100%;
   background-color:white;
   
  
