--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -14,7 +14,7 @@ body, html {
   background-image: url('jayfont.png') ;
   background-position: center;
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size:100%;
   height: 100%;
   width: 100%;
   background-color:white;
