--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -12,7 +12,7 @@ body, html {
 
 .jumbotron{
   background-image: url('jayfont.png') ;
-  position: center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size:100%;
   height: 20%;
