--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -3,7 +3,7 @@ body, html {
     max-width: 100%;
     min-height:50%;
     min-width:50%;
-    background-image: url('smileface.jpg');
+    background-image: url('Logo - Happy Smile 11 27 17.png');
     background-size: 45%;
     background-position: center;
     background-repeat: no-repeat;
