--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -11,14 +11,16 @@ body, html {
 
 
 .jumbotron .img {
-    
+    display:block;
+    margin-left:auto;
+    margin-right:auto;    
     
 }
 
 
 
 .jumbotron{
-
+  text-align:center;
   background-position: center;
   background-repeat: no-repeat;
   background-size:100%;
