--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -117,7 +117,7 @@ top:5%;
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 50px;
+    font-size: 35px;
     color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
@@ -126,8 +126,8 @@ top:5%;
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 45px;
-    color: blue;
+    font-size: 35px;
+    color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
