--- a/docs/welcome.css
+++ b/docs/welcome.css
@@ -88,7 +88,7 @@ top:5%;
 }
 #overlay {
     position: fixed;
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     top: 0;
@@ -101,7 +101,7 @@ top:5%;
 }
 #overlay1{
     position: fixed;
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     top: 0;
